--- a/index.html
+++ b/index.html
@@ -451,10 +451,13 @@ font-family: Arial, Helvetica, sans-serif;">📖 Memory 75DaysHardPlacementChall
                 <figcaption>Day75</figcaption>
               </figure>
 
+              <div class="footerImg"> <img src="./allDaysImg/76 Last Day WraupTime.jpg" alt=""></div>
+
 
             </div>
 
           </div>
+
         </div>
       </div>
 
